added docker settings