@@ -1,15 +1,20 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:1.23.1-alpine AS build
 
-FROM openjdk:8-jre-slim
+WORKDIR /avitoTask
+
+RUN apk --no-cache add bash make gcc gettext musl-dev
+
+COPY go.mod go.sum ./
+
+RUN go mod download
+
+COPY . .
+
+RUN ls
+
+RUN go build ./cmd/main.go
 
 EXPOSE 8080
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+CMD ["./main"]
 
